Added placeholder text for category labels

--- a/blog.html
+++ b/blog.html
@@ -18,14 +18,16 @@
         <div class="form-group">
           <select class="custom-select" id="category">
             <option selected value="">All Categories</option>
-            <option value="Personal">Personal</option>
-            <option value="Product Review">Product Review</option>
-            <option value="Political">Political</option>
+            <option value="Category 1">Category 1</option>
+            <option value="Category 2">Category 2</option>
+            <option value="Category 3">Category 3</option>
+            <option value="Category 4">Category 4</option>
+            <option value="Category 5">Category 5</option>
           </select>
         </div>
       </div>
       <div class="col-md-2">
-        <a class="btn btn-light" href="/cms">New Post</a>
+        <a class="btn btn-light" href="/cms">New Entry</a>
       </div>
     </div>
     <div class="row">
