--- a/cms.html
+++ b/cms.html
@@ -30,9 +30,11 @@
             <div class="form-group">
               <label for="category">Select Category:</label>
               <select class="custom-select" id="category">
-                <option value="Personal">Personal</option>
-                <option value="Product Review">Product Review</option>
-                <option value="Political">Political</option>
+                <option value="Category 1">Category 1</option>
+                <option value="Category 2">Category 2</option>
+                <option value="Category 3">Category 3</option>
+                <option value="Category 4">Category 4</option>
+                <option value="Category 5">Category 5</option>
               </select>
             </div>
             <br />
