--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,18 @@
     </nav>
   </header>
 
+  <div class="jumbotron jumbotron-fluid">
+    <h1 class="display-4">Twitter Ripoff</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+      featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p class="lead">
+      <a class="btn btn-danger" href="/cms">Write a New Post</a>
+    </p>
+  </div>
 
+  <br><br>
 
 
 
