--- a/blog.html
+++ b/blog.html
@@ -49,13 +49,49 @@
 
   <br><br>
 
-
-
-
-
-
-
-
+  <div class="row">
+    <!-- User Profile Information -->
+    <div class="col-sm-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Abraham Lincoln <br> </strong> @potus </h5>
+          <img src="" alt="Avatar">
+          <p class="card-text">
+            <p> 16th President of the United States </p>
+            <p>I enjoy defeating rebels, combing my beard, and attending plays. </p>
+            <p>Location: Washington, DC, USA </p>
+            <p><a href="www.whitehouse.gov">www.whitehouse.gov</a></p>
+          </p>
+          <form class="form-inline">
+            <div class="form-group">
+              <select class="custom-select" id="category">
+                <option selected value="">Browse Topics...</option>
+                <option value="Personal">Personal</option>
+                <option value="Product Review">Product Review</option>
+                <option value="Political">Political</option>
+              </select>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- User's Posts -->
+    <div class="col-sm-6">
+      <div class="blog-container"></div>
+    </div>
+    <!-- Additional info, like "You may also like..." -->
+    <div class="col-sm-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">You may also like...</h5>
+          <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam eligendi vitae qui minima
+            ipsa pariatur dolores fuga, vel similique neque nulla laborum aliquam debitis dolor? Aliquam enim eaque
+            blanditiis corporis?</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Custom Script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
