Added home page header to the 'new post' page.  Deleted the template 'go to blog' button.  Enlarged the text input field.  Added a space between body text box and 'select category' form.  Renamed title of page to 'new post'. git status cd ~

--- a/cms.html
+++ b/cms.html
@@ -3,23 +3,41 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CMS - Express</title>
+  <title>New Post</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+  <link rel="stylesheet" href="public/css/styles.css" media="screen" title="no title">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="blog.html">Hidden brand</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="blog.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+      </header>
   <div class="container">
     <div class="row">
-      <div class="row">
-        <div class="col-sm-2 mt-4">
-          <a class="btn btn-light" href="/blog">Go to Blog</a>
-        </div>
-      </div>
-      <div class="col-md-5 offset-md-3">
+      <div class="col-md-6 offset-md-3">
         <form id="cms">
           <div class="form-group">
             <label for="title">Title:</label>
@@ -27,6 +45,7 @@
             <br />
             <label for="body">Body:</label>
             <textarea class="form-control" rows="10" id="body"></textarea>
+            <br>
             <div class="form-group">
               <label for="category">Select Category:</label>
               <select class="custom-select" id="category">
