--- a/cms.html
+++ b/cms.html
@@ -44,7 +44,7 @@
             <input type="text" class="form-control" id="title">
             <br />
             <label for="body">Body:</label>
-            <textarea class="form-control" rows="10" id="body"></textarea>
+            <textarea class="form-control" rows="10" id="body" placeholder="What's on your mind?"></textarea>
             <br>
             <div class="form-group">
               <label for="category">Select Category:</label>
