Added an avatar image of Abe Lincoln, who is our user example.  The image was saved to the css folder.  Added the correct image source to the blog.html file, and a class of 'avatar' to be later modified in the css file

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><strong>Abraham Lincoln <br> </strong> @potus </h5>
-          <img src="" alt="Avatar">
+          <img src="public/css/lincoln-avatar.jpg" alt="Avatar" class="avatar">
           <p class="card-text">
             <p> 16th President of the United States </p>
             <p>I enjoy defeating rebels, combing my beard, and attending plays. </p>
