Changed user link to a more appropriate one

--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
             <p> 16th President of the United States </p>
             <p>I enjoy defeating rebels, combing my beard, and attending plays. </p>
             <p>Location: Washington, DC, USA </p>
-            <p><a href="www.whitehouse.gov">www.whitehouse.gov</a></p>
+            <p><a href="https://www.whitehouse.gov/about-the-white-house/presidents/abraham-lincoln/">www.whitehouse.gov/lincoln</a></p>
           </p>
           <form class="form-inline">
             <div class="form-group">
