--- a/blog.html
+++ b/blog.html
@@ -84,10 +84,10 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">You may also like...</h5>
-          <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam eligendi vitae qui minima
-            ipsa pariatur dolores fuga, vel similique neque nulla laborum aliquam debitis dolor? Aliquam enim eaque
-            blanditiis corporis?</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">
+            
+          </p>
+          
         </div>
       </div>
     </div>
